@@ -137,6 +137,9 @@ JH/31 Fix bug with hosts_connection_nolog and named-lists which were wrongly
 JH/32 Move Redis support from Experimental to mainline, enabled for a build
       by defining LOOKUP_REDIS. The libhiredis library is required.
 
+JH/33 Bug 1748: Permit ACL dnslists= condition in non-smtp ACLs if explicit
+      keys are given for lookup.
+
 
 Exim version 4.86
 -----------------
